同步主仓库
部分内容为汉化，将在下一个commit中汉化，
且此次commit后构建的文件未进行测试，请慎重考虑更新您正在使用的插件