@@ -87,10 +87,10 @@ public class ItemBrowser extends PluginInventory {
                 ItemStack item = currentType.getItem();
                 item.setAmount(Math.max(1, Math.min(64, items)));
                 ItemMeta meta = item.getItemMeta();
-                AdventureUtils.setDisplayName(meta, "&a%s&8 (点击浏览)".formatted(currentType.getName()));
+                AdventureUtils.setDisplayName(meta, String.format("&a%s&8 (点击浏览)", currentType.getName()));
                 meta.addItemFlags(ItemFlag.values());
                 List<String> lore = new ArrayList<>();
-                lore.add("&7当前%s %s &7%s 个物品.".formatted(items == 1 ? "该类型有" : "这类型有", items < 1 ? "&c&o没" : "&6&o%d".formatted(items), items == 1 ? "" : " "));
+                lore.add(String.format("&7&o当前%s %s &7%s 个物品.", items == 1 ? "该类型有" : "这类型有", items < 1 ? "&c&o没" : "&6&o" + items, items == 1 ? "" : ""));
                 AdventureUtils.setLore(meta, lore);
                 item.setItemMeta(meta);
 
